Add SN facet abstraction, factory and DTO
Introduce a unified facet abstraction and wiring for Semantic Navigation (SN). Adds TurSNFacetDefinition interface with implementations (TurSNFieldFacetDefinition, TurSNCustomFacetDefinition) and a TurSNFacetDefinitionFactory to build facet definitions from field entities. Add TurSNSiteFacetOrderingDto and update TurSNSiteFacetedFieldAPI to return/use the DTO and map facet definitions to DTOs. Refactor TurSNFieldProcess to produce facet definitions and provide ordering, and adapt TurSNSearchProcess, TurSolrQueryBuilder and TurSolrResultProcessor to consume TurSNFacetDefinition instead of handling custom facets inline. Update tests accordingly. Also: disable H2 console in application.yaml and add testing guidelines and Spring Boot version note in agents.md.