@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2025 the original author or authors.
+ * Copyright (C) 2016-2026 the original author or authors.
  *
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
@@ -22,16 +22,14 @@
 package com.viglet.turing.sn;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -40,16 +38,12 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.viglet.turing.persistence.model.sn.TurSNSite;
+import com.viglet.turing.persistence.model.sn.field.TurSNSiteCustomFacet;
 import com.viglet.turing.persistence.model.sn.field.TurSNSiteFieldExt;
 import com.viglet.turing.persistence.repository.sn.TurSNSiteRepository;
 import com.viglet.turing.persistence.repository.sn.field.TurSNSiteFieldExtRepository;
+import com.viglet.turing.sn.facet.TurSNFacetDefinitionFactory;
 
-/**
- * Unit tests for TurSNFieldProcess.
- *
- * @author Alexandre Oliveira
- * @since 2025.1.10
- */
 @ExtendWith(MockitoExtension.class)
 class TurSNFieldProcessTest {
 
@@ -63,110 +57,104 @@ class TurSNFieldProcessTest {
 
     @BeforeEach
     void setUp() {
-        turSNFieldProcess = new TurSNFieldProcess(turSNSiteRepository, turSNSiteFieldExtRepository);
+        turSNFieldProcess = new TurSNFieldProcess(
+                turSNSiteRepository,
+                turSNSiteFieldExtRepository,
+                new TurSNFacetDefinitionFactory());
     }
 
     @Test
-    void testGetTurSNSiteFieldOrderingWithValidSite() {
+    void testGetTurSNSiteFieldOrderingWithFieldAndCustomFacet() {
         String snSiteId = "site-123";
-        TurSNSite mockSite = new TurSNSite();
-        mockSite.setId(snSiteId);
+        TurSNSite site = new TurSNSite();
+        site.setId(snSiteId);
 
-        TurSNSiteFieldExt field1 = new TurSNSiteFieldExt();
-        TurSNSiteFieldExt field2 = new TurSNSiteFieldExt();
-        List<TurSNSiteFieldExt> expectedFields = Arrays.asList(field1, field2);
+        TurSNSiteFieldExt fieldFacet = new TurSNSiteFieldExt();
+        fieldFacet.setId("field-1");
+        fieldFacet.setName("category");
+        fieldFacet.setFacetName("Category");
+        fieldFacet.setFacet(1);
+        fieldFacet.setEnabled(1);
+        fieldFacet.setFacetPosition(1);
+        fieldFacet.setTurSNSite(site);
 
-        when(turSNSiteRepository.findById(snSiteId)).thenReturn(Optional.of(mockSite));
-        when(turSNSiteFieldExtRepository.findByTurSNSiteAndFacetAndEnabledOrderByFacetPosition(
-                mockSite, 1, 1)).thenReturn(expectedFields);
+        TurSNSiteCustomFacet customFacet = new TurSNSiteCustomFacet();
+        customFacet.setId("custom-1");
+        customFacet.setName("price_range");
+        HashMap<String, String> labels = new HashMap<>();
+        labels.put("pt-BR", "Faixa de Preço");
+        customFacet.setLabel(labels);
+
+        TurSNSiteFieldExt fieldWithCustomFacet = new TurSNSiteFieldExt();
+        fieldWithCustomFacet.setId("field-2");
+        fieldWithCustomFacet.setName("price");
+        fieldWithCustomFacet.setFacet(0);
+        fieldWithCustomFacet.setEnabled(1);
+        fieldWithCustomFacet.setTurSNSite(site);
+        fieldWithCustomFacet.setCustomFacets(Set.of(customFacet));
+
+        when(turSNSiteRepository.findById(snSiteId)).thenReturn(Optional.of(site));
+        when(turSNSiteFieldExtRepository.findByTurSNSiteAndEnabled(site, 1))
+                .thenReturn(List.of(fieldWithCustomFacet, fieldFacet));
 
         Optional<List<TurSNSiteFieldExt>> result = turSNFieldProcess.getTurSNSiteFieldOrdering(snSiteId);
 
         assertThat(result).isPresent();
         assertThat(result.get()).hasSize(2);
-        assertThat(result.get()).containsExactly(field1, field2);
+        assertThat(result.get().get(0).getName()).isEqualTo("category");
+        assertThat(result.get().get(1).getName()).isEqualTo("price_range");
+        assertThat(result.get().get(1).getFacetName()).isEqualTo("Faixa de Preço");
+        assertThat(result.get().get(1).getFacetPosition()).isEqualTo(Integer.MAX_VALUE);
 
         verify(turSNSiteRepository).findById(snSiteId);
-        verify(turSNSiteFieldExtRepository).findByTurSNSiteAndFacetAndEnabledOrderByFacetPosition(
-                mockSite, 1, 1);
+        verify(turSNSiteFieldExtRepository).findByTurSNSiteAndEnabled(site, 1);
     }
 
     @Test
-    void testGetTurSNSiteFieldOrderingWithNonExistentSite() {
-        String snSiteId = "non-existent-site";
-
-        when(turSNSiteRepository.findById(snSiteId)).thenReturn(Optional.empty());
-
-        Optional<List<TurSNSiteFieldExt>> result = turSNFieldProcess.getTurSNSiteFieldOrdering(snSiteId);
-
-        assertThat(result).isEmpty();
-
-        verify(turSNSiteRepository).findById(snSiteId);
-        verify(turSNSiteFieldExtRepository, never()).findByTurSNSiteAndFacetAndEnabledOrderByFacetPosition(
-                any(), anyInt(), anyInt());
-    }
-
-    @Test
-    void testGetTurSNSiteFieldOrderingWithEmptyFieldList() {
+    void testGetTurSNSiteFieldOrderingUsesDefaultLabelBeforeAnyLocale() {
         String snSiteId = "site-456";
-        TurSNSite mockSite = new TurSNSite();
-        mockSite.setId(snSiteId);
+        TurSNSite site = new TurSNSite();
+        site.setId(snSiteId);
 
-        when(turSNSiteRepository.findById(snSiteId)).thenReturn(Optional.of(mockSite));
-        when(turSNSiteFieldExtRepository.findByTurSNSiteAndFacetAndEnabledOrderByFacetPosition(
-                mockSite, 1, 1)).thenReturn(Collections.emptyList());
+        TurSNSiteCustomFacet customFacet = new TurSNSiteCustomFacet();
+        customFacet.setId("custom-2");
+        customFacet.setName("status_bucket");
+        customFacet.setDefaultLabel("Status");
+        HashMap<String, String> labels = new HashMap<>();
+        labels.put("en-US", "Status EN");
+        labels.put("pt-BR", "Status PT");
+        customFacet.setLabel(labels);
 
-        Optional<List<TurSNSiteFieldExt>> result = turSNFieldProcess.getTurSNSiteFieldOrdering(snSiteId);
+        TurSNSiteFieldExt fieldWithCustomFacet = new TurSNSiteFieldExt();
+        fieldWithCustomFacet.setId("field-3");
+        fieldWithCustomFacet.setName("status");
+        fieldWithCustomFacet.setFacet(0);
+        fieldWithCustomFacet.setEnabled(1);
+        fieldWithCustomFacet.setTurSNSite(site);
+        fieldWithCustomFacet.setCustomFacets(Set.of(customFacet));
 
-        assertThat(result).isPresent();
-        assertThat(result.get()).isEmpty();
-
-        verify(turSNSiteRepository).findById(snSiteId);
-        verify(turSNSiteFieldExtRepository).findByTurSNSiteAndFacetAndEnabledOrderByFacetPosition(
-                mockSite, 1, 1);
-    }
-
-    @Test
-    void testGetTurSNSiteFieldOrderingWithNullSiteId() {
-        when(turSNSiteRepository.findById(null)).thenReturn(Optional.empty());
-
-        Optional<List<TurSNSiteFieldExt>> result = turSNFieldProcess.getTurSNSiteFieldOrdering(null);
-
-        assertThat(result).isEmpty();
-
-        verify(turSNSiteRepository).findById(null);
-        verify(turSNSiteFieldExtRepository, never()).findByTurSNSiteAndFacetAndEnabledOrderByFacetPosition(
-                any(), anyInt(), anyInt());
-    }
-
-    @Test
-    void testGetTurSNSiteFieldOrderingReturnTypeNotNull() {
-        String snSiteId = "site-789";
-
-        when(turSNSiteRepository.findById(snSiteId)).thenReturn(Optional.empty());
-
-        Optional<List<TurSNSiteFieldExt>> result = turSNFieldProcess.getTurSNSiteFieldOrdering(snSiteId);
-
-        assertThat(result).isNotNull();
-    }
-
-    @Test
-    void testGetTurSNSiteFieldOrderingWithSingleField() {
-        String snSiteId = "single-field-site";
-        TurSNSite mockSite = new TurSNSite();
-        mockSite.setId(snSiteId);
-
-        TurSNSiteFieldExt field = new TurSNSiteFieldExt();
-        List<TurSNSiteFieldExt> singleFieldList = Collections.singletonList(field);
-
-        when(turSNSiteRepository.findById(snSiteId)).thenReturn(Optional.of(mockSite));
-        when(turSNSiteFieldExtRepository.findByTurSNSiteAndFacetAndEnabledOrderByFacetPosition(
-                mockSite, 1, 1)).thenReturn(singleFieldList);
+        when(turSNSiteRepository.findById(snSiteId)).thenReturn(Optional.of(site));
+        when(turSNSiteFieldExtRepository.findByTurSNSiteAndEnabled(site, 1))
+                .thenReturn(List.of(fieldWithCustomFacet));
 
         Optional<List<TurSNSiteFieldExt>> result = turSNFieldProcess.getTurSNSiteFieldOrdering(snSiteId);
 
         assertThat(result).isPresent();
         assertThat(result.get()).hasSize(1);
-        assertThat(result.get().get(0)).isEqualTo(field);
+        assertThat(result.get().get(0).getFacetName()).isEqualTo("Status");
+    }
+
+    @Test
+    void testGetTurSNSiteFieldOrderingWithNonExistentSite() {
+        when(turSNSiteRepository.findById("missing-site")).thenReturn(Optional.empty());
+
+        Optional<List<TurSNSiteFieldExt>> result = turSNFieldProcess
+                .getTurSNSiteFieldOrdering("missing-site");
+
+        assertThat(result).isEmpty();
+        verify(turSNSiteRepository).findById("missing-site");
+        verify(turSNSiteFieldExtRepository, never()).findByTurSNSiteAndEnabled(
+                org.mockito.ArgumentMatchers.any(),
+                org.mockito.ArgumentMatchers.anyInt());
     }
 }
